# DeviceBridge

./: .gitignore  README.md  config.yaml.sample  meson.build
include/devicebridge/: application.hpp  configuration.hpp  error.hpp  neighbour.hpp
src/: application.cpp  configuration.cpp  main.cpp  neighbour.cpp
subprojects/: libblepp.wrap
